fix tmux config

--- a/other_sh/.tmux.conf
+++ b/other_sh/.tmux.conf
@@ -24,8 +24,8 @@ bind U resize-pane -U 5
 bind D resize-pane -D 5
 
 ## set current path
-bind '"' spilt-window -h -c '#{pane_current_path}'
-bind '%' spilt-window -c '#{pane_current_path}'
+bind '"' split-window -h -c '#{pane_current_path}'
+bind '%' split-window -c '#{pane_current_path}'
 
 ## copy as vim
 ## <prefix>Esc 进入拷贝模式， v后可以选择拷贝文本, y确定拷贝文本
@@ -42,6 +42,8 @@ setw -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
+## if error, use below
+#set -g mouse on
 
 ### ------------------------- How to use
 
@@ -50,7 +52,7 @@ set -g mouse-select-window on
 
 ## rename session : <prefix>$
 ## create a window : <prefix>c
-## vertical spilt window : <prefix>%
-## horizontal split window : <prefix>"
+## vertical spilt window : <prefix>"
+## horizontal split window : <prefix>%
 ## quit session : <prefix>d
 ## show shortcut : <prefix>?
